src/snapshots/rura__output_widget__tests__no scrolling.snap
---
source: src/output_widget.rs
expression: terminal.backend()
---
"1 line1   "
"2 line2   "
"3 line3   "
"4 line4   "
"5 line5   "
"6 line6   "
"7 line7   "
"8 line8   "
"          "
"          "
