src/snapshots/rura__output_widget__tests__scroll down line.snap
---
source: src/output_widget.rs
expression: terminal.backend()
---
" 2 line2 ▲"
" 3 line3 █"
" 4 line4 █"
" 5 line5 ║"
" 6 line6 ▼"
