src/snapshots/rura__output_widget__tests__scroll down page.snap
---
source: src/output_widget.rs
expression: terminal.backend()
---
" 6 line6 ▲"
" 7 line7 ║"
" 8 line8 █"
" 9 line9 █"
"10 line10▼"
